changing poster width to try to locate image not showing issue

--- a/src/style.css
+++ b/src/style.css
@@ -63,7 +63,7 @@ nav {
     padding: 1.5rem 0;
 }
 #poster {
-    width: 100%;
+    width: 500px;
     max-width: 600px;
     min-width: 40%;
 }
